fixed reports on IE

--- a/QF3 Apps/cws/reports/css/reports.css
+++ b/QF3 Apps/cws/reports/css/reports.css
@@ -32,3 +32,9 @@
 #patient-button span span.ui-btn-text{
 	width: 155px
 }
+
+#reportFrame{
+	height:80%;
+	width:100%;
+	display:block;
+}
